# tools

./: .gitignore  Makefile  README.md  install.py
update-all/: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
update-all/cmd/: edit.go  init.go  root.go
update-all/core/: cmd.go  config.go  fileutil.go  record.go
update-all/src/: cache.rs  main.rs  routine.rs  task_control.rs
update-all/src/cmd/: edit.go  root.go
update-all/src/core/: config.go  record.go  record_test.go  routine.go
update_all/: Makefile  README.md  go.mod  go.sum
update_all/src/: main.go
update_all/src/cmd/: edit.go  init.go  root.go
update_all/src/core/: cmd.go  config.go  fileutil.go  record.go  record_test.go  routine.go  routine_test.go
