[package]
authors = ["Ian Chen <ianre657@gmail.com>"]
edition = "2018"
name = "update-all"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.19"
clap = "2.33.3"
filetime = "0.2"
humantime = "2.0.1"
log = "0.4"
loggerv = "0.7.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8.13"
